--- a/src/resources/gui/views/sample.fxml
+++ b/src/resources/gui/views/sample.fxml
@@ -1,8 +1,52 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="com.bateleur.app.controller.SampleController"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bateleur.app.controller.SampleController">
+   <columnConstraints>
+      <ColumnConstraints />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+   </rowConstraints>
+   <children>
+      <AnchorPane prefHeight="527.0" prefWidth="971.0">
+         <children>
+            <AnchorPane layoutY="420.0" prefHeight="107.0" prefWidth="971.0" style="-fx-background-color: #7aabf9;">
+               <children>
+                  <Slider layoutX="183.0" layoutY="14.0" />
+                  <ImageView fitHeight="99.0" fitWidth="116.0" layoutX="7.0" layoutY="4.0" pickOnBounds="true" smooth="false">
+                       <image>
+                           <Image url="@/gui/images/orange-square-md.png" />
+                       </image>
+                  </ImageView>
+                  <Slider layoutX="373.0" layoutY="14.0" prefHeight="14.0" prefWidth="558.0" />
+                  <ToggleButton layoutX="840.0" layoutY="39.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="60.0" style="-fx-background-radius: 100;" text="Play" />
+                  <ToggleButton layoutX="788.0" layoutY="47.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="43.0" style="-fx-background-radius: 100;" text="Back" />
+                  <ToggleButton layoutX="910.0" layoutY="47.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="43.0" style="-fx-background-radius: 100;" text="Foward" />
+                  <ButtonBar layoutX="486.0" layoutY="46.0" pickOnBounds="false" prefHeight="40.0" prefWidth="222.0">
+                     <buttons>
+                        <ToggleButton minWidth="43.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="35.0" style="-fx-background-radius: 30;" text="Shuffle" />
+                        <ToggleButton minWidth="67.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="35.0" style="-fx-background-radius: 30;" text="Queue" />
+                        <ToggleButton minWidth="42.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="35.0" style="-fx-background-radius: 30;" text="Repeat" />
+                     </buttons>
+                  </ButtonBar>
+                  <Label layoutX="144.0" layoutY="72.0" text="Darude" />
+                  <Label layoutX="269.0" layoutY="72.0" text="Track Number" />
+                  <Label layoutX="201.0" layoutY="72.0" text="Album" />
+                  <Label layoutX="144.0" layoutY="45.0" prefHeight="17.0" prefWidth="203.0" text="Sandstorm" />
+               </children>
+            </AnchorPane>
+         </children>
+      </AnchorPane>
+   </children>
 </GridPane>
