--- a/src/resources/gui/views/sample.fxml
+++ b/src/resources/gui/views/sample.fxml
@@ -31,9 +31,9 @@
                        </image>
                   </ImageView>
                   <Slider layoutX="373.0" layoutY="14.0" prefHeight="14.0" prefWidth="558.0" />
-                  <ToggleButton layoutX="840.0" layoutY="39.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="60.0" style="-fx-background-radius: 100;" text="Play" />
-                  <Button layoutX="788.0" layoutY="47.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="43.0" style="-fx-background-radius: 100;" text="Back" />
-                  <Button layoutX="910.0" layoutY="47.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="43.0" style="-fx-background-radius: 100;" text="Forward" />
+                  <ToggleButton layoutX="840.0" layoutY="39.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="60.0" style="-fx-background-radius: 100;" text="Play" onMouseClicked="#onPlayPausePress"/>
+                  <Button layoutX="788.0" layoutY="47.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="43.0" style="-fx-background-radius: 100;" text="Back" onMouseClicked="#onSkipBackwardPress"/>
+                  <Button layoutX="910.0" layoutY="47.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="43.0" style="-fx-background-radius: 100;" text="Forward" onMouseClicked="#onSkipForwardPress"/>
                   <ButtonBar layoutX="486.0" layoutY="46.0" pickOnBounds="false" prefHeight="40.0" prefWidth="222.0">
                      <buttons>
                         <ToggleButton minWidth="43.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="35.0" style="-fx-background-radius: 30;" text="Shuffle" onMouseClicked="#onShufflePress"/>
