--- a/src/resources/gui/views/sample.fxml
+++ b/src/resources/gui/views/sample.fxml
@@ -24,13 +24,13 @@
          <children>
             <AnchorPane layoutY="420.0" prefHeight="107.0" prefWidth="971.0" style="-fx-background-color: #ff4830;">
                <children>
-                  <Slider fx:id="volumeBar" layoutX="183.0" layoutY="14.0"/>
+                  <Slider fx:id="volumeBar" layoutX="140.0" layoutY="14.0"/>
                   <ImageView fitHeight="107.0" fitWidth="107.0" layoutX="0.0" layoutY="0.0" pickOnBounds="true" smooth="false">
                        <image>
-                           <Image url="@/resources/gui/images/orange-square-md.png" />
+                           <Image url="@/resources/gui/images/orange-square-md-107.png" />
                        </image>
                   </ImageView>
-                  <Slider fx:id="seekBar" layoutX="373.0" layoutY="14.0" prefHeight="14.0" prefWidth="558.0"/>
+                  <Slider fx:id="seekBar" layoutX="385.0" layoutY="14.0" prefHeight="14.0" prefWidth="570.0"/>
                   <ToggleButton fx:id="playPauseButton" layoutX="840.0" layoutY="39.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="60.0" style="-fx-background-radius: 100;" text="Play" onMouseClicked="#onPlayPausePress"/>
                   <Button fx:id="skipBackwardButton" layoutX="788.0" layoutY="47.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="43.0" style="-fx-background-radius: 100;" text="Back" onMouseClicked="#onSkipBackwardPress"/>
                   <Button fx:id="skipForwardButton" layoutX="910.0" layoutY="47.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="43.0" style="-fx-background-radius: 100;" text="Forward" onMouseClicked="#onSkipForwardPress"/>
@@ -41,8 +41,8 @@
                         <ToggleButton fx:id="repeatButton" minWidth="42.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="35.0" style="-fx-background-radius: 30;" text="Repeat" onMouseClicked="#onRepeatPress" />
                      </buttons>
                   </ButtonBar>
-                  <Label fx:id="textTop" layoutX="144.0" layoutY="45.0" prefHeight="17.0" prefWidth="203.0" text="" />
-                  <Label fx:id="textBot" layoutX="144.0" layoutY="72.0" text="" />
+                  <Label fx:id="textTop" layoutX="144.0" layoutY="45.0" prefHeight="17.0" prefWidth="203.0" text="" style="-fx-text-fill: #ffffff;"/>
+                  <Label fx:id="textBot" layoutX="144.0" layoutY="72.0" text="" style="-fx-text-fill: #ffffff;"/>
                </children>
             </AnchorPane>
          </children>
