--- a/src/resources/gui/views/sample.fxml
+++ b/src/resources/gui/views/sample.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -129,10 +130,31 @@
       <AnchorPane layoutX="-157.0" layoutY="-242.0" prefHeight="25.0" prefWidth="0.0" style="-fx-background-color: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.0));" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label id="topBarLabel" fx:id="topBarLabel" textFill="WHITE" translateX="1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-            <Button id="topBarDrag" mnemonicParsing="false" style="-fx-background-color: rgba(255, 255, 255, 0.0);" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-            <Button id="topBarClose" mnemonicParsing="false" prefWidth="40.0" style="-fx-background-color: rgba(255, 255, 255, 0.0);" text="X" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-            <Button id="topBarMaximize" mnemonicParsing="false" prefWidth="40.0" style="-fx-background-color: rgba(255, 255, 255, 0.0);" text="[]" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="0.0" />
-            <Button id="topBarMinimize" mnemonicParsing="false" prefWidth="40.0" style="-fx-background-color: rgba(255, 255, 255, 0.0);" text="--" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="0.0" />
+            <Button id="topBarDrag" mnemonicParsing="false" style="-fx-background-color: rgba(255, 255, 255, 0.0);" textAlignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <Button id="topBarClose" mnemonicParsing="false" prefWidth="40.0" style="-fx-background-color: rgba(255, 255, 255, 0.0);" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <graphic>
+                  <ImageView fitHeight="10.0" fitWidth="10.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/btnClo.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
+            <Button id="topBarMaximize" mnemonicParsing="false" prefWidth="40.0" style="-fx-background-color: rgba(255, 255, 255, 0.0);" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="0.0">
+               <graphic>
+                  <ImageView fitHeight="10.0" fitWidth="10.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/btnMax.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
+            <Button id="topBarMinimize" mnemonicParsing="false" prefWidth="40.0" style="-fx-background-color: rgba(255, 255, 255, 0.0);" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="0.0">
+               <graphic>
+                  <ImageView fitHeight="10.0" fitWidth="10.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/btnMin.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
          </children>
       </AnchorPane>
    </children>
