--- a/src/com/bateleur/app/App_resources/views/view.fxml
+++ b/src/com/bateleur/app/App_resources/views/view.fxml
@@ -135,7 +135,7 @@
                <graphic>
                   <ImageView fitHeight="10.0" fitWidth="10.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../images/btnClo.png" />
+                        <Image url="@../textures/btnClo.png" />
                      </image>
                   </ImageView>
                </graphic></Button>
@@ -143,7 +143,7 @@
                <graphic>
                   <ImageView fitHeight="10.0" fitWidth="10.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../images/btnMax.png" />
+                        <Image url="@../textures/btnMax.png" />
                      </image>
                   </ImageView>
                </graphic></Button>
@@ -151,7 +151,7 @@
                <graphic>
                   <ImageView fitHeight="10.0" fitWidth="10.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../images/btnMin.png" />
+                        <Image url="@../textures/btnMin.png" />
                      </image>
                   </ImageView>
                </graphic></Button>
