Begin implementing music selection pane.

--- a/src/com/bateleur/app/App_resources/css/StyleGlobal.css
+++ b/src/com/bateleur/app/App_resources/css/StyleGlobal.css
@@ -10,3 +10,16 @@
 	-fx-text-fill: white;
 	-fx-padding: 0;
 }
+
+.tab-content-area {
+	-fx-background-color: rgba(255, 255, 255, 0.0);
+}
+
+.tab-pane *.tab-header-background {
+	-fx-background-color: -fx-outer-border, -fx-inner-border, derive(-fx-color, -20%);
+	-fx-effect: innershadow(two-pass-box , rgba(0,0,0,0.6) , 4, 0.0 , 0 , 0);
+}
+
+.scroll-pane > .viewport {
+	-fx-background-color: transparent;
+}
